--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 codewithsadee All Rights Reserved.
+          &copy; 2024 nikunj@gaming All Rights Reserved.
         </p>
 
       </div>
